--- a/dockerfiles/dashing/dashboards/punchlist.erb
+++ b/dockerfiles/dashing/dashboards/punchlist.erb
@@ -8,7 +8,7 @@ $(function() {
 
 <div class="gridster">
   <ul>
-<%#    <li data-row="1" data-col="1" data-sizex="1" data-sizey="3">
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="3">
       <div data-id="leaderboard" data-view="List" data-title="% Complete Leaderboard" data-info="Closed issues over total issues"></div>
     </li>
     <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
@@ -46,6 +46,6 @@ $(function() {
     </li>
     <li data-row="3" data-col="5" data-sizex="1" data-sizey="1">
       <div data-id="company_12" data-view="IssueSummary"></div>
-    </li> %>
+    </li>
   </ul>
 </div>
