--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
@@ -8,9 +8,9 @@ $title-color:       rgba(255, 255, 255, 0.7);
 $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
 // ----------------------------------------------------------------------------
-// Widget-number styles
+// widget-issuesummary styles
 // ----------------------------------------------------------------------------
-.widget-number {
+.widget-issuesummary {
 
   background-color: $background-color;
 
