--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
@@ -18,17 +18,24 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     color: $title-color;
   }
 
-  h2 {
+  .value {
     color: $value-color;
+    line-height: 80%
   }
 
   .primary {
+    color: $value-color;
     font-size: xx-large;
   }
 
   .secondary {
+    color: $value-color;
     font-size: x-large;
     text-align: left;
+  }
+
+  .secondary span {
+    text-align: right;
   }
 
   .more-info {
