--- a/dockerfiles/dashing/dashboards/punchlist.erb
+++ b/dockerfiles/dashing/dashboards/punchlist.erb
@@ -12,40 +12,40 @@ $(function() {
       <div data-id="leaderboard" data-view="List" data-title="% Complete Leaderboard" data-info="Closed issues over total issues"></div>
     </li>
     <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
-      <div data-id="company_1" data-view="Issuesummary"></div>
+      <div data-id="company_0" data-view="Issuesummary"></div>
     </li>
     <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-      <div data-id="company_2" data-view="Issuesummary"></div>
+      <div data-id="company_1" data-view="Issuesummary"></div>
     </li>
     <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
+      <div data-id="company_2" data-view="Issuesummary"></div>
+    </li>
+    <li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
       <div data-id="company_3" data-view="Issuesummary"></div>
     </li>
-    <li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="company_4" data-view="Issuesummary"></div>
     </li>
-    <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="company_5" data-view="Issuesummary"></div>
     </li>
-    <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="company_6" data-view="Issuesummary"></div>
     </li>
-    <li data-row="2" data-col="4" data-sizex="1" data-sizey="1">
+    <li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
       <div data-id="company_7" data-view="Issuesummary"></div>
     </li>
-    <li data-row="2" data-col="5" data-sizex="1" data-sizey="1">
+    <li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="company_8" data-view="Issuesummary"></div>
     </li>
-    <li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
+    <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
       <div data-id="company_9" data-view="Issuesummary"></div>
     </li>
-    <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
+    <li data-row="3" data-col="4" data-sizex="1" data-sizey="1">
       <div data-id="company_10" data-view="Issuesummary"></div>
     </li>
-    <li data-row="3" data-col="4" data-sizex="1" data-sizey="1">
-      <div data-id="company_11" data-view="Issuesummary"></div>
-    </li>
     <li data-row="3" data-col="5" data-sizex="1" data-sizey="1">
-      <div data-id="company_12" data-view="Issuesummary"></div>
+      <div data-id="total" data-view="Issuesummary"></div>
     </li>
   </ul>
 </div>
