--- a/dockerfiles/dashing/dashboards/punchlist.erb
+++ b/dockerfiles/dashing/dashboards/punchlist.erb
@@ -8,8 +8,11 @@ $(function() {
 
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="1" data-sizey="3">
+    <li data-row="2" data-col="1" data-sizex="1" data-sizey="2">
       <div data-id="leaderboard" data-view="List" data-title="% Complete Leaderboard" data-info="Closed issues over total issues"></div>
+    </li>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="total" data-view="Issuesummary"></div>
     </li>
     <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
       <div data-id="company_0" data-view="Issuesummary"></div>
@@ -45,7 +48,7 @@ $(function() {
       <div data-id="company_10" data-view="Issuesummary"></div>
     </li>
     <li data-row="3" data-col="5" data-sizex="1" data-sizey="1">
-      <div data-id="total" data-view="Issuesummary"></div>
+      <div data-id="company_11" data-view="Issuesummary"></div>
     </li>
   </ul>
 </div>
