--- a/dockerfiles/dashing/dashboards/punchlist.erb
+++ b/dockerfiles/dashing/dashboards/punchlist.erb
@@ -51,5 +51,8 @@ $(function() {
     <li data-row="3" data-col="5" data-sizex="1" data-sizey="1">
       <div data-id="company_11" data-view="Issuesummary"></div>
     </li>
+    <li data-row="4" data-col="1" data-sizex="5" data-sizey="2">
+      <div data-id="debug" data-view="Text"></div>
+    </li>
   </ul>
 </div>
