Leaderboard extra variables

--- a/dockerfiles/dashing/widgets/list/list.scss
+++ b/dockerfiles/dashing/widgets/list/list.scss
@@ -32,6 +32,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
   li {
     margin-bottom: 5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .list-nostyle {
