--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
@@ -40,4 +40,8 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
+
+  .secondaryValue {
+    float: right;
+  }
 }
