--- a/dockerfiles/dashing/widgets/list/list.scss
+++ b/dockerfiles/dashing/widgets/list/list.scss
@@ -42,6 +42,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
     color: $label-color;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 50px;
   }
 
   .value {
