--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
@@ -43,5 +43,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
   .secondaryValue {
     float: right;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
   }
 }
