--- a/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
+++ b/dockerfiles/dashing/widgets/issuesummary/issuesummary.scss
@@ -31,18 +31,21 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
   .primary {
     color: $value-color;
     font-size: xx-large;
+    margin-bottom: 10px;
+    padding-bottom: 0px;
   }
 
   .secondary {
     color: $value-color;
     font-size: x-large;
     text-align: left;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
   }
 
   .secondaryValue {
     float: right;
+  }
+
+  .h2 {
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
